# keypad-prototype

./: .gitignore  .gitmodules  404.html  Makefile  README.md  design.html  index.html  intro.html  print.html  searchindex.js  searchindex.json
.github/workflows/: release.yaml
_generated/: ibom.html
docs/: book.toml
docs/src/: design.md  intro.md
firmware/: CMakeLists.txt
firmware/arduino_poc/: arduino_poc.ino
firmware/src/: main.cpp
hardware/keyboard/: comms.sch  fp-lib-table  keyboard-cache.lib  keyboard.kicad_pcb  keyboard.pro  keyboard.sch  keymatrix.sch  sym-lib-table
